--- a/arogy/pubspec.yaml
+++ b/arogy/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   file_picker: ^8.1.4
   tflite: ^1.1.2
   google_ml_kit: ^0.6.0
+  uuid: ^4.1.0
   # firebase_ml_vision: ^0.9.0  # For ML Kit
   # tflite_flutter: ^0.9.0  # If using custom TensorFlow Lite model
 
